--- a/proyecto-3/index.html
+++ b/proyecto-3/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es-ES">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://s.pinimg.com/webapp/favicon_48x48-7470a30d.png"
+      rel="icon"
+    />
+    <script type="module" src="/main.js" defer></script>
+    <title>Pinterest Async</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1 class="oculto">Pinterest Async</h1>
+    <header></header>
+    <main>
+      <section>
+        <h2 class="oculto">Imágenes de usuarios</h2>
+        <div class="flex container fotos"></div>
+      </section>
+    </main>
   </body>
 </html>
